Closed
Bug 189974
Opened 23 years ago
Closed 23 years ago
Profile Switching fails after JavaScript based cert import
Categories
(Core Graveyard :: Security: UI, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
psm2.4
People
(Reporter: KaiE, Assigned: KaiE)
References
Details
Attachments
(1 file)
|
659 bytes,
patch
|
javi
:
review+
darin.moz
:
superreview+
asa
:
approval1.3b+
|
Details | Diff | Splinter Review |
Use the special test build containing the patch from bug 97622.
Use the intranet page at
https://pki.mcom.com:1025/ca/DirUserEnroll1024.html
to obtain a test certificate.
Switch the profile.
Actual behaviour: profile switching fails.
| Assignee | ||
Comment 1•23 years ago
|
||
I believe bug 189976 needs to be fixed, however, it seems there is another leak
in PSM. I believe this patch will be required in addition to make it work.
| Assignee | ||
Comment 2•23 years ago
|
||
Comment on attachment 112183 [details] [diff] [review]
Partial fix
Javi, can you please review?
caPubs is created using CMMF_CertRepContentGetCAPubs, which calls
cmmf_MakeCertList, defined here:
http://lxr.mozilla.org/seamonkey/source/security/nss/lib/crmf/respcmn.c#154
Attachment #112183 -
Flags: review?(javi)
Comment 3•23 years ago
|
||
Comment on attachment 112183 [details] [diff] [review]
Partial fix
r=javi
Attachment #112183 -
Flags: review?(javi) → review+
| Assignee | ||
Comment 4•23 years ago
|
||
Comment on attachment 112183 [details] [diff] [review]
Partial fix
Darin, can you please review this one-liner?
Attachment #112183 -
Flags: superreview?(darin)
Comment 5•23 years ago
|
||
Comment on attachment 112183 [details] [diff] [review]
Partial fix
rs=darin
Attachment #112183 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 6•23 years ago
|
||
It seems we have fixes for this issue. When using both the patches from this bug
and bug 189976, the issue is fixed for me.
Assignee: ssaux → kaie
Priority: -- → P1
Target Milestone: --- → 2.4
| Assignee | ||
Comment 7•23 years ago
|
||
Comment on attachment 112183 [details] [diff] [review]
Partial fix
I'm nominating this patch (plus the patch in bug 189976) for inclusion in 1.3
beta. It would allow us to do better testing of the new profile switching
feature.
Attachment #112183 -
Flags: approval1.3b?
Comment 8•23 years ago
|
||
Comment on attachment 112183 [details] [diff] [review]
Partial fix
a=asa (on behalf of drivers) for checkin to 1.3beta.
Attachment #112183 -
Flags: approval1.3b? → approval1.3b+
| Assignee | ||
Comment 9•23 years ago
|
||
Checked in to trunk, marking fixed.
Fix will be contained in 1.3 beta.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•