b=189974 Profile Switching fails after JavaScript based cert import PSM portion of fix r=javi sr=darin a=asa